--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,12 @@
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
-	<dependency>
-        <groupId>org.apache.tomcat.embed</groupId> <!-- Jsp動作環境 -->
-        <artifactId>tomcat-embed-jasper</artifactId>
-        <scope>provided</scope>
+    
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+
 
 
 	</dependencies>
