--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>jp.te4a.spring.boot</groupId>
-	<artifactId>MyBootApp8</artifactId>
+	<artifactId>MyBootApp6</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MyBootApp8</name>
+	<name>MyBootApp6</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -38,12 +38,11 @@
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
-    
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	<dependency>
+        <groupId>org.apache.tomcat.embed</groupId> <!-- Jsp動作環境 -->
+        <artifactId>tomcat-embed-jasper</artifactId>
+        <scope>provided</scope>
     </dependency>
-
 
 
 	</dependencies>
